load("@rules_java//java:java_binary.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "besu.BUILD",
    "maven_install.json",
])

java_binary(
    name = "besu",
    main_class = "org.hyperledger.besu.Besu",
    runtime_deps = [
        "@org_hyperledger_besu_23103_hotfix//:besu",
    ],
)
